# bazel-jacocorunner

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  build_stack_bazel_jacocorunner_maven_install.json  coverage.sh  jacoco_http_archive.bzl  jacoco_maven_install.json  jacoco_repositories.bzl  maven_build_stack_rules_scala_coverage_install.json  maven_repositories.bzl  repositories.bzl  versions.bzl
.github/workflows/: ci.yaml  release.yaml
example-bin/: BUILD.bazel
example-lib/: BUILD.bazel
example-lib/src/test/scala/mypackage/: Test.scala
example-maven/: BUILD.bazel
example/lib/: BUILD.bazel
example/lib/src/main/scala/mypackage/: Foo.scala
example/maven/: BUILD.bazel
example/maven/src/test/scala/mypackage/: Test.scala
java/com/google/devtools/coverageoutputgenerator/: BUILD.bazel  Coverage.java  Main.java  SourceFileCoverage.java
java/com/google/testing/coverage/: BUILD.bazel  JacocoCoverageFeatures.java  JacocoCoverageRunner.java  JacocoLCOVFormatter.java  TestJacocoCoverageFeatures.java  TestTrie.java  Trie.java
tools/covbean/: BUILD.bazel
tools/java/: BUILD.bazel
tools/jdk/: BUILD.bazel
tools/scala/: BUILD.bazel
