load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "lib",
    srcs = glob(["src/main/scala/**/*.scala"]),
    visibility = ["//visibility:public"],
)

scala_test(
    name = "test",
    srcs = glob(["src/test/scala/**/*.scala"]),
    deps = [":lib"],
)

java_library(
    name = "hello-world",
    srcs = ["src/main/java/mypackage/Greeter.java"],
)

java_test(
    name = "java_test",
    srcs = ["src/test/java/mypackage/TestHello.java"],
    test_class = "mypackage.TestHello",
    deps = [":hello-world"],
)
