load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "maven",
    srcs = glob(["src/main/scala/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "@build_stack_bazel_jacocorunner_maven//:com_twitter_algebird_core_2_13",
        "@build_stack_bazel_jacocorunner_maven//:org_typelevel_algebra_2_13",
        "@build_stack_bazel_jacocorunner_maven//:org_typelevel_cats_kernel_2_13",
    ],
)

scala_test(
    name = "test",
    srcs = glob(["src/test/scala/**/*.scala"]),
    deps = [":maven"],
)
