# This file was produced via the following procedure:
#
# - `bazel query --output build @bazel_tools//tools/jdk:all | pbcopy`
# - delete all rules other than the `java_toolchain` related rules.
# - replace `jacocorunner` attribute with the filegroup defined here.
# - make all `toolchain` rules public.

filegroup(
    name = "jacocorunner",
    srcs = ["@bazel_jacocorunner//:jar"],
    visibility = ["//visibility:public"],
)

java_toolchain(
    name = "prebuilt_toolchain",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar_prebuilt_binary"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remote_jdk11",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "-XX:-CompactStrings",
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:prebuilt_singlejar"],
    source_version = "8",
    target_version = "8",
    turbine_jvm_opts = ["-XX:+UseParallelGC"],
)

java_toolchain(
    name = "toolchain",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remote_jdk11",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "-XX:-CompactStrings",
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "8",
    target_version = "8",
    turbine_jvm_opts = ["-XX:+UseParallelGC"],
)

java_toolchain(
    name = "toolchain_java10",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remote_jdk11",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "-XX:-CompactStrings",
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "10",
    target_version = "10",
    turbine_jvm_opts = ["-XX:+UseParallelGC"],
)

toolchain(
    name = "toolchain_java10_definition",
    target_settings = ["//tools/jdk:toolchain_java10_version_setting"],
    toolchain = "//tools/jdk:toolchain_java10",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_java10_version_setting",
    values = {"java_language_version": "10"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_java11",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remote_jdk11",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "-XX:-CompactStrings",
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "11",
    target_version = "11",
    turbine_jvm_opts = ["-XX:+UseParallelGC"],
)

toolchain(
    name = "toolchain_java11_definition",
    target_settings = ["//tools/jdk:toolchain_java11_version_setting"],
    toolchain = "//tools/jdk:toolchain_java11",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "toolchain_runtime_java11_definition",
    target_settings = ["//tools/jdk:toolchain_java11_version_setting"],
    toolchain = "//tools/jdk:toolchain_java11",
    toolchain_type = "@bazel_tools//tools/jdk:runtime_toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_java11_version_setting",
    values = {"java_language_version": "11"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_java8",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remote_jdk11",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "-XX:-CompactStrings",
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "8",
    target_version = "8",
    turbine_jvm_opts = ["-XX:+UseParallelGC"],
)

toolchain(
    name = "toolchain_java8_definition",
    target_settings = ["//tools/jdk:toolchain_java8_version_setting"],
    toolchain = "//tools/jdk:toolchain_java8",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_java8_version_setting",
    values = {"java_language_version": "8"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_java9",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remote_jdk11",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "-XX:-CompactStrings",
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "9",
    target_version = "9",
    turbine_jvm_opts = ["-XX:+UseParallelGC"],
)

toolchain(
    name = "toolchain_java9_definition",
    target_settings = ["//tools/jdk:toolchain_java9_version_setting"],
    toolchain = "//tools/jdk:toolchain_java9",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_java9_version_setting",
    values = {"java_language_version": "9"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_jdk_14",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remotejdk_14",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "14",
    target_version = "14",
)

toolchain(
    name = "toolchain_jdk_14_definition",
    target_settings = ["//tools/jdk:toolchain_jdk_14_version_setting"],
    toolchain = "//tools/jdk:toolchain_jdk_14",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_jdk_14_version_setting",
    values = {"java_language_version": "14"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_jdk_15",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remotejdk_15",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "15",
    target_version = "15",
)

toolchain(
    name = "toolchain_jdk_15_definition",
    target_settings = ["//tools/jdk:toolchain_jdk_15_version_setting"],
    toolchain = "//tools/jdk:toolchain_jdk_15",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_jdk_15_version_setting",
    values = {"java_language_version": "15"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_jdk_16",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remotejdk_16",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "16",
    target_version = "16",
)

toolchain(
    name = "toolchain_jdk_16_definition",
    target_settings = ["//tools/jdk:toolchain_jdk_16_version_setting"],
    toolchain = "//tools/jdk:toolchain_jdk_16",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_jdk_16_version_setting",
    values = {"java_language_version": "16"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_jdk_17",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remotejdk_17",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "17",
    target_version = "17",
)

toolchain(
    name = "toolchain_jdk_17_definition",
    target_settings = ["//tools/jdk:toolchain_jdk_17_version_setting"],
    toolchain = "//tools/jdk:toolchain_jdk_17",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_jdk_17_version_setting",
    values = {"java_language_version": "17"},
    visibility = ["//visibility:private"],
)

java_toolchain(
    name = "toolchain_jdk_18",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    forcibly_disable_header_compilation = False,
    genclass = ["@remote_java_tools//:GenClass"],
    header_compiler = ["@remote_java_tools//:TurbineDirect"],
    header_compiler_direct = ["@remote_java_tools//:TurbineDirect"],
    ijar = ["@bazel_tools//tools/jdk:ijar"],
    jacocorunner = ":jacocorunner",
    java_runtime = "@bazel_tools//tools/jdk:remotejdk_18",
    javabuilder = ["@remote_java_tools//:JavaBuilder"],
    javac_supports_workers = True,
    jvm_opts = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "-Dsun.io.useCanonCaches=false",
    ],
    misc = [
        "-XDskipDuplicateBridges=true",
        "-XDcompilePolicy=simple",
        "-g",
        "-parameters",
        "-Xep:ReturnValueIgnored:OFF",
    ],
    reduced_classpath_incompatible_processors = ["dagger.hilt.processor.internal.root.RootProcessor"],
    singlejar = ["@bazel_tools//tools/jdk:singlejar"],
    source_version = "18",
    target_version = "18",
)

toolchain(
    name = "toolchain_jdk_18_definition",
    target_settings = ["//tools/jdk:toolchain_jdk_18_version_setting"],
    toolchain = "//tools/jdk:toolchain_jdk_18",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "toolchain_jdk_18_version_setting",
    values = {"java_language_version": "18"},
    visibility = ["//visibility:private"],
)
