load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
load("@io_bazel_rules_scala//scala:providers.bzl", "declare_deps_provider")
load("@io_bazel_rules_scala//testing/toolchain:toolchain.bzl", "scala_testing_toolchain")

scala_toolchain(
    name = "compile_toolchain_impl",
    dep_providers = [
        ":scala_compile_classpath_provider",
        ":scala_library_classpath_provider",
        ":scala_macro_classpath_provider",
        ":scala_xml_provider",
        ":parser_combinators_provider",
    ],
    scalacopts = ["-Ywarn-unused"],
    unused_dependency_checker_mode = "off",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "compile_toolchain",
    toolchain = "compile_toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

declare_deps_provider(
    name = "scala_compile_classpath_provider",
    deps_id = "scala_compile_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@build_stack_bazel_jacocorunner_maven//:org_scala_lang_scala_compiler",
        "@build_stack_bazel_jacocorunner_maven//:org_scala_lang_scala_library",
        "@build_stack_bazel_jacocorunner_maven//:org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "scala_library_classpath_provider",
    deps_id = "scala_library_classpath",
    deps = [
        "@build_stack_bazel_jacocorunner_maven//:org_scala_lang_scala_library",
        "@build_stack_bazel_jacocorunner_maven//:org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "scala_macro_classpath_provider",
    deps_id = "scala_macro_classpath",
    deps = [
        "@build_stack_bazel_jacocorunner_maven//:org_scala_lang_scala_library",
        "@build_stack_bazel_jacocorunner_maven//:org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "scala_xml_provider",
    deps_id = "scala_xml",
    deps = ["@io_bazel_rules_scala_scala_xml"],
)

declare_deps_provider(
    name = "parser_combinators_provider",
    deps_id = "parser_combinators",
    deps = ["@io_bazel_rules_scala_scala_parser_combinators"],
)

toolchain(
    name = "testing_toolchain",
    toolchain = ":scalatest_testing_toolchains",
    toolchain_type = "@io_bazel_rules_scala//testing/toolchain:testing_toolchain_type",
    visibility = ["//visibility:public"],
)

scala_testing_toolchain(
    name = "scalatest_testing_toolchains",
    dep_providers = [
        ":scalatest_classpath_provider",
    ],
    visibility = ["//visibility:public"],
)

declare_deps_provider(
    name = "scalatest_classpath_provider",
    deps_id = "scalatest_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@build_stack_bazel_jacocorunner_maven//:org_scalactic_scalactic_2_13",
        "@build_stack_bazel_jacocorunner_maven//:org_scalatest_scalatest_2_13",
    ],
)
